# coco-trustee

./: .dockerignore  .gitignore  Dockerfile  base.Dockerfile  base.builder.Dockerfile  build.sh  build_base.sh  build_docker.sh  build_trustee.sh  coco-trustee-builder.dockerfile  coco-trustee.dockerfile  docker-compose-test.yml  docker-compose.yml
cfs-kbs/: as-config.json  extra_credential_file  kbs-config-docker.toml  kbs-config-insecure.toml  kbs-config.toml  ownership-config.yaml  run.sh  test.sh
cfs-test/: kbs-config-docker.toml  kbs-config.toml  public.pub  run.sh  test.sh
config/: default_resource_policy.rego
deploy/: README.md  deploy.sh  test.sh
deploy/artifact/: cfs-kbs-pvc.yaml  cfs-kbs.yaml  cfs-security-engine-pvc.yaml  cfs-security-engine.yaml
docker/: Dockerfile.coco-as-grpc
src/api/: Cargo.toml
src/api/src/: config.rs  lib.rs  session.rs
src/api/src/attestation/coco/: builtin.rs  grpc.rs
src/api/src/http/: attest.rs  command.rs  config.rs  error.rs  evidence.rs  mod.rs  ownership.rs  resource.rs
src/api/src/policy_engine/opa/: mod.rs
src/api/src/resource/: local_fs.rs  mod.rs
src/kbs/src/: main.rs
tools/client/: Cargo.toml
tools/client/src/: lib.rs  main.rs
